// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Component base should return a Form object 1`] = `
<form
  className=""
/>
`;

exports[`Form Component base should return a Form object and textField with filled formStyle 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  color: inherit;
  background-color: hsl(0,0%,100%);
  font-family: inherit;
  font-size: 0.8rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  left: 0.5rem;
  padding: 0 0.5rem;
  top: -0.5rem;
  position: absolute;
}

.c1 {
  position: relative;
  color: inherit;
  background-color: hsl(0,0%,100%);
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 2px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
  outline: 1;
  width: 100%;
}

.c2:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c2:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c2[required] + label:after {
  content: "*";
}

.c2[disabled] {
  opacity: 0.3;
}

.c2[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c2::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c2:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c2::placeholder {
  color: hsl(0,0%,75%);
}

<form
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2"
      id="exampleFullName"
      readOnly={false}
      required={false}
      tabIndex="0"
      type="text"
    />
    <label
      className="c3"
      htmlFor="exampleFullName"
    >
      Full name
    </label>
  </div>
</form>
`;

exports[`Form Component base should return a Form object with 2 filled formStyle and textField 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  color: inherit;
  background-color: hsl(0,0%,100%);
  font-family: inherit;
  font-size: 0.8rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  left: 0.5rem;
  padding: 0 0.5rem;
  top: -0.5rem;
  position: absolute;
}

.c1 {
  position: relative;
  color: inherit;
  background-color: hsl(0,0%,100%);
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 2px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
  outline: 1;
  width: 100%;
}

.c2:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c2:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c2[required] + label:after {
  content: "*";
}

.c2[disabled] {
  opacity: 0.3;
}

.c2[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c2::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c2:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c2::placeholder {
  color: hsl(0,0%,75%);
}

<form
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2"
      id="exampleFullName"
      readOnly={false}
      required={false}
      tabIndex="0"
      type="text"
    />
    <label
      className="c3"
      htmlFor="exampleFullName"
    >
      Full name
    </label>
  </div>
  <div
    className="c1"
  >
    <input
      className="c2"
      id="address"
      readOnly={false}
      required={false}
      tabIndex="0"
      type="text"
    />
    <label
      className="c3"
      htmlFor="address"
    >
      Address
    </label>
  </div>
</form>
`;

exports[`Form Component base should return a Form object with div that do not get formStyle="filled" 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<form
  className="c0"
>
  <div
    id="1"
  />
</form>
`;

exports[`Form Component base should return a Form object with filled formStyle and textField with outlined 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  color: inherit;
  background-color: hsl(0,0%,100%);
  font-family: inherit;
  font-size: 0.8rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  left: 0.5rem;
  padding: 0 0.5rem;
  top: -0.5rem;
  position: absolute;
}

.c1 {
  position: relative;
  color: inherit;
  background-color: hsl(0,0%,100%);
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c2:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c2:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c2[required] + label:after {
  content: "*";
}

.c2[disabled] {
  opacity: 0.3;
}

.c2[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c2::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c2:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c2::placeholder {
  color: hsl(0,0%,75%);
}

<form
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2"
      id="exampleFullName"
      readOnly={false}
      required={false}
      tabIndex="0"
      type="text"
    />
    <label
      className="c3"
      htmlFor="exampleFullName"
    >
      Full name
    </label>
  </div>
</form>
`;

exports[`Form Component base should return a Form object with flex direction column 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<form
  className="c0"
  flexDirection="column"
/>
`;
